--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>FavColors</title>
-        <meta name="description" content="A smart color collection tool by Vadim Hermann">
+        <meta name="description" content="A smart color collection tool">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="css/screen.css">
     </head>
@@ -25,21 +25,5 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script src="js/main.js"></script>
-        <script type="text/javascript" src="f5less.js"></script>
-        <script type="text/javascript">
-            f5less.connect({
-                triggersCSSReload: function(filename) {
-                    return f5less.strEndsWith(filename, 
-                        ".css", ".png", ".jpg", ".scss"
-                    );
-                },
-
-                triggersPageReload: function(filename) {
-                    return f5less.strEndsWith(filename, 
-                        ".js", ".html", ".htm", ".php", ".md"
-                    );
-                }
-            });
-        </script>
     </body>
 </html>
