--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
             <h1>FavColors <span class="version">v.0.1.0</span></h1>
             <h3>A smart color collection tool by Vadim Hermann</h3>
 
+            <!-- 
+              Feel free to kill my favourite colors and add your own ;) 
+
+              Hint: Colors sorted by their contrasts. If you need a sorting by colors, please create groups.
+
+            -->
+
             <div data-title="red">#FD6D52 #E9573E #DA3610 #E74C3C #C0392B</div>
             <div data-title="orange">#FBC852 #F27935 #FFAB00 #FF702A #E67E22 #F39C12 #D35400</div>
             <div data-title="yellow">#F1C40F #FAF7E8</div>
@@ -23,7 +30,7 @@
             <div data-title="gray">#434A54 #E5E8ED #4F5055 #9EA7B3 #EAEDF1 #222222 #ECF0F1 #95A5A6 #BDC3C7 #7F8C8D</div>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+        <script src="js/jquery-1.10.2.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
