--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/screen.css">
     </head>
     <body>
+        <a href="https://github.com/Vaddo/FavColors/tree/gh-pages" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0; z-index::;1;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
         <div class="page">
             <h1>FavColors <span class="version">v.0.1.0</span></h1>
