add copy to clipboard script; add some css feedback

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
 
         <script src="js/jquery-1.10.2.min.js"></script>
+        <script src="js/ZeroClipboard.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
