new colors added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="https://github.com/Vaddo/FavColors/tree/gh-pages" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0; z-index::;1;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
         <div class="page">
-            <h1>FavColors <span class="version">v.0.1.0</span></h1>
+            <h1>FavColors <span class="version">v.0.1.1</span></h1>
             <h3>A smart color collection tool by Vadim Hermann</h3>
 
             <!-- 
@@ -22,13 +22,13 @@
 
             -->
 
-            <div data-title="red">#FD6D52 #E9573E #DA3610 #E74C3C #C0392B</div>
+            <div data-title="red">#FD6D52 #E9573E #DA3610 #E74C3C #C0392B #E87352</div>
             <div data-title="orange">#FBC852 #F27935 #FFAB00 #FF702A #E67E22 #F39C12 #D35400</div>
-            <div data-title="yellow">#F1C40F #FAF7E8</div>
-            <div data-title="green">#A0D468 #8DC153 #9BB465 #1FBBA6 #8DCA35 #1ABC9C #2ECC71 #16A085 #27AE60 #EDE96C</div>
-            <div data-title="blue">#323A45 #50C0E8 #3BAEDA #01A3B2 #00AFD1 #1D3037 #00BFDD #3498DB #34495E #2980B9 #2C3E50</div>
+            <div data-title="yellow">#F1C40F #FAF7E8 #EAC95E</div>
+            <div data-title="green">#A0D468 #8DC153 #9BB465 #1FBBA6 #8DCA35 #1ABC9C #2ECC71 #16A085 #27AE60 #EDE96C #60CD9B</div>
+            <div data-title="blue">#323A45 #50C0E8 #3BAEDA #01A3B2 #00AFD1 #1D3037 #00BFDD #3498DB #34495E #2980B9 #2C3E50 #67B0D1 #3ABEC0</div>
             <div data-title="purple">#9579DE #9B59B6</div>
-            <div data-title="gray">#434A54 #E5E8ED #4F5055 #9EA7B3 #EAEDF1 #222222 #ECF0F1 #95A5A6 #BDC3C7 #7F8C8D</div>
+            <div data-title="gray">#434A54 #E5E8ED #4F5055 #9EA7B3 #EAEDF1 #222222 #ECF0F1 #95A5A6 #BDC3C7 #7F8C8D #2D2D2D</div>
         </div>
 
         <script src="js/jquery-1.10.2.min.js"></script>
