--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
         <a href="https://github.com/Vaddo/FavColors/tree/gh-pages" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0; z-index::;1;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
         <div class="page">
-            <h1>FavColors <span class="version">v.0.1.1</span></h1>
+            <h1>FavColors <span class="version">v.0.1.2</span></h1>
             <h3>A smart color collection tool by Vadim Hermann</h3>
 
             <!-- 
+
               Feel free to kill my favourite colors and add your own ;) 
 
               Hint: Colors sorted by their contrasts. If you need a sorting by colors, please create groups.
 
             -->
 
-            <div data-title="red">#FD6D52 #E9573E #DA3610 #E74C3C #C0392B #E87352</div>
+            <div data-title="red">#FD6D52 #E9573E #DA3610 #E74C3C #C0392B #E87352 #AA2323</div>
             <div data-title="orange">#FBC852 #F27935 #FFAB00 #FF702A #E67E22 #F39C12 #D35400</div>
             <div data-title="yellow">#F1C40F #FAF7E8 #EAC95E</div>
             <div data-title="green">#A0D468 #8DC153 #9BB465 #1FBBA6 #8DCA35 #1ABC9C #2ECC71 #16A085 #27AE60 #EDE96C #60CD9B</div>
