--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
 
             -->
 
-            <div data-title="red">#FD6D52 #E9573E #DA3610 #E74C3C #C0392B #E87352 #AA2323</div>
-            <div data-title="orange">#FBC852 #F27935 #FFAB00 #FF702A #E67E22 #F39C12 #D35400</div>
+            <div data-title="red">#FD6D52 #E9573E #DA3610 #E74C3C #C0392B #E87352 #AA2323 #EF3331</div>
+            <div data-title="orange">#FBC852 #F27935 #FFAB00 #FF702A #E67E22 #F39C12 #D35400 #FE7E19</div>
             <div data-title="yellow">#F1C40F #FAF7E8 #EAC95E</div>
-            <div data-title="green">#A0D468 #8DC153 #9BB465 #1FBBA6 #8DCA35 #1ABC9C #2ECC71 #16A085 #27AE60 #EDE96C #60CD9B</div>
-            <div data-title="blue">#323A45 #50C0E8 #3BAEDA #01A3B2 #00AFD1 #1D3037 #00BFDD #3498DB #34495E #2980B9 #2C3E50 #67B0D1 #3ABEC0</div>
-            <div data-title="purple">#9579DE #9B59B6</div>
-            <div data-title="gray">#434A54 #E5E8ED #4F5055 #9EA7B3 #EAEDF1 #222222 #ECF0F1 #95A5A6 #BDC3C7 #7F8C8D #2D2D2D</div>
+            <div data-title="green">#A0D468 #8DC153 #9BB465 #1FBBA6 #8DCA35 #1ABC9C #2ECC71 #16A085 #27AE60 #EDE96C #60CD9B #CCDE88 #4ECBB9 #A8C16E #5B7268 #EAE7BA #8CAE9E #79A09F</div>
+            <div data-title="blue">#323A45 #50C0E8 #3BAEDA #01A3B2 #00AFD1 #1D3037 #00BFDD #3498DB #34495E #2980B9 #2C3E50 #67B0D1 #3ABEC0 #4682B4 #C7D7E4 #B6E5DF #0A506A #8CA7B4</div>
+            <div data-title="purple">#9579DE #9B59B6 #A400AE #4D4C5C #8A5E6D</div>
+            <div data-title="pink">#F9D5DF</div>
+            <div data-title="brown">#AC867B #815A5F #D0BFA5 #D1C0A6</div>
+            <div data-title="gray">#434A54 #E5E8ED #4F5055 #9EA7B3 #EAEDF1 #222222 #ECF0F1 #95A5A6 #BDC3C7 #7F8C8D #2D2D2D #C3C0B9 #6E6A69</div>
         </div>
 
         <script src="js/jquery-1.10.2.min.js"></script>
