Add and sort colors

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="https://github.com/Vaddo/FavColors/tree/gh-pages" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0; z-index::;1;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
         <div class="page">
-            <h1>FavColors <span class="version">v.0.1.3</span></h1>
+            <h1>FavColors <span class="version">v.0.1.4</span></h1>
             <h3>A smart color collection tool by Vadim Hermann</h3>
 
             <!-- 
@@ -23,15 +23,15 @@
 
             -->
 
-            <div data-title="red">#FD6D52 #E9573E #DA3610 #E74C3C #C0392B #E87352 #AA2323 #EF3331 #ED2F4B #FC6061</div>
-            <div data-title="orange">#FBC852 #F27935 #FFAB00 #FF702A #E67E22 #F39C12 #D35400 #FE7E19</div>
-            <div data-title="yellow">#F1C40F #FAF7E8 #EAC95E #FCECAE</div>
-            <div data-title="green">#A0D468 #8DC153 #9BB465 #1FBBA6 #8DCA35 #1ABC9C #2ECC71 #16A085 #27AE60 #EDE96C #60CD9B #CCDE88 #4ECBB9 #A8C16E #5B7268 #EAE7BA #8CAE9E #79A09F #01C770 #3D8821</div>
-            <div data-title="blue">#323A45 #50C0E8 #3BAEDA #01A3B2 #00AFD1 #1D3037 #00BFDD #3498DB #34495E #2980B9 #2C3E50 #67B0D1 #3ABEC0 #4682B4 #C7D7E4 #B6E5DF #0A506A #8CA7B4 #A1DDE5 #01C2D4 #0168B3 #004E99</div>
-            <div data-title="purple">#9579DE #9B59B6 #A400AE #4D4C5C #8A5E6D #324065 #16203B #DC53E1 #A241E9 #655063</div>
+            <div data-title="red">#FD6D52 #DA3610 #E74C3C #C0392B #E87352 #AA2323 #EF3331 #ED2F4B #FC6061</div>
+            <div data-title="orange">#FBC852 #F27935 #FFAB00 #FF702A #E67E22 #F39C12 #D35400 #FE7E19 #F5764B</div>
+            <div data-title="yellow">#F1C40F #FAF7E8 #EAC95E #FCECAE #FAE25A</div>
+            <div data-title="green">#A0D468 #8DC153 #9BB465 #1FBBA6 #8DCA35 #1ABC9C #2ECC71 #16A085 #27AE60 #EDE96C #60CD9B #4ECBB9 #A8C16E #5B7268 #EAE7BA #8CAE9E #79A09F #01C770 #3D8821 #D0E177</div>
+            <div data-title="blue">#323A45 #50C0E8 #01A3B2 #00AFD1 #1D3037 #00BFDD #3498DB #2980B9 #2C3E50 #67B0D1 #3ABEC0 #4682B4 #C7D7E4 #B6E5DF #0A506A #8CA7B4 #A1DDE5 #01C2D4 #0168B3 #004E99 #344A61 #324065 #16203B</div>
+            <div data-title="purple">#9579DE #9B59B6 #A400AE #DC53E1 #A241E9 #655063 #70253C</div>
             <div data-title="pink">#F9D5DF</div>
-            <div data-title="brown">#AC867B #815A5F #D0BFA5 #D1C0A6</div>
-            <div data-title="gray">#434A54 #E5E8ED #4F5055 #9EA7B3 #EAEDF1 #222222 #ECF0F1 #95A5A6 #BDC3C7 #7F8C8D #2D2D2D #C3C0B9 #6E6A69</div>
+            <div data-title="brown">#AC867B #815A5F #D0BFA5 #D1C0A6 #8A5E6D</div>
+            <div data-title="gray">#434A54 #E5E8ED #4F5055 #9EA7B3 #222222 #ECF0F1 #95A5A6 #BDC3C7 #7F8C8D #2D2D2D #C3C0B9 #6E6A69 #4D4C5C</div>
         </div>
 
         <script src="js/jquery-1.10.2.min.js"></script>
