--- a/index.html
+++ b/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>FavColors</title>
-        <meta name="description" content="A smart color collection tool">
-        <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="css/screen.css">
-    </head>
-    <body>
-        <a href="https://github.com/Vaddo/FavColors/tree/gh-pages" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0; z-index::;1;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>FavColors</title>
+  <meta name="description" content="A smart color collection tool">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="css/screen.css">
+</head>
+<body>
+    <a href="https://github.com/Vaddo/FavColors/tree/gh-pages" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0; z-index::;1;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
-        <div class="page">
-            <h3 id="colorCount"></h3>
-            <h1>FavColors <span class="version">v.0.2.0</span></h1>
-            <h3>A smart color collection tool for Webdesigners</h3>
+    <h3 id="colorCount"></h3>
+    <h1>FavColors <span class="version">v.0.3.1</span></h1>
+    <h3>A smart color collection tool for Webdesigners</h3><br>
+    <h3>This project is maintained by <a target="_blank" href="http://www.vadim-hermann.com">Vadim Hermann</a></h3>
 
-            <!-- 
+    <ul id="radioList" class="radioList">
+      <li>
+        <input type="radio" id="radio-1" name="radio" checked>
+        <label for="radio-1">HEX</label>
+      </li>
+      <li>
+        <input type="radio" id="radio-2" name="radio">
+        <label for="radio-2">RGB</label>
+      </li>
+      <li>
+        <input type="radio" id="radio-3" name="radio">
+        <label for="radio-3">RGBA</label>
+      </li>
+    </ul>
 
-              Feel free to kill my favourite colors and add your own ;) 
 
-            -->
-            <div id="colors">#FD6D52 #DA3610 #E74C3C #C0392B #E87352 #AA2323 #EF3331 #ED2F4B #FC6061 #FBC852 #F27935 #FFAB00 #FF702A #E67E22 #F39C12 #D35400 #FE7E19 #F5764B #F1C40F #FAF7E8 #EAC95E #FCECAE #FAE25A #A0D468 #8DC153 #9BB465 #1FBBA6 #8DCA35 #1ABC9C #2ECC71 #16A085 #27AE60 #EDE96C #60CD9B #4ECBB9 #A8C16E #5B7268 #EAE7BA #8CAE9E #79A09F #01C770 #3D8821 #D0E177 #323A45 #50C0E8 #01A3B2 #00AFD1 #1D3037 #00BFDD #3498DB #2980B9 #2C3E50 #67B0D1 #3ABEC0 #4682B4 #C7D7E4 #B6E5DF #0A506A #8CA7B4 #A1DDE5 #01C2D4 #0168B3 #004E99 #344A61 #324065 #16203B #9579DE #9B59B6 #A400AE #DC53E1 #A241E9 #655063 #70253C #F9D5DF #AC867B #815A5F #D0BFA5 #D1C0A6 #8A5E6D #434A54 #E5E8ED #4F5055 #9EA7B3 #222222 #ECF0F1 #95A5A6 #BDC3C7 #7F8C8D #2D2D2D #C3C0B9 #6E6A69 #4D4C5C</div>
-        </div>
+    <!-- 
 
-        <script src="js/jquery-1.10.2.min.js"></script>
-        <script src="js/ZeroClipboard.min.js"></script>
-        <script src="js/main.js"></script>
-    </body>
-</html>
+      Feel free to kill my favourite colors and add your own ;) 
+
+    -->
+    <div id="colors">#FD6D52 #DA3610 #E74C3C #C0392B #E87352 #AA2323 #EF3331 #ED2F4B #FC6061 #FBC852 #F27935 #FFAB00 #FF702A #E67E22 #F39C12 #D35400 #FE7E19 #F5764B #F1C40F #FAF7E8 #EAC95E #FCECAE #FAE25A #A0D468 #8DC153 #9BB465 #1FBBA6 #8DCA35 #1ABC9C #2ECC71 #16A085 #27AE60 #EDE96C #60CD9B #4ECBB9 #A8C16E #5B7268 #EAE7BA #8CAE9E #79A09F #01C770 #3D8821 #D0E177 #323A45 #50C0E8 #01A3B2 #00AFD1 #1D3037 #00BFDD #3498DB #2980B9 #2C3E50 #67B0D1 #3ABEC0 #4682B4 #C7D7E4 #B6E5DF #0A506A #8CA7B4 #A1DDE5 #01C2D4 #0168B3 #004E99 #344A61 #324065 #16203B #9579DE #9B59B6 #A400AE #DC53E1 #A241E9 #655063 #70253C #F9D5DF #AC867B #815A5F #D1C0A6 #8A5E6D #434A54 #E5E8ED #4F5055 #9EA7B3 #222222 #ECF0F1 #95A5A6 #BDC3C7 #7F8C8D #2D2D2D #C3C0B9 #6E6A69 #4D4C5C #F8F9FE #FEFFFA #FFFAFA #FEFFF1 #FEFAEF #FFF4EE #FFF8DC #FDF6E6 #FFFDD0 #F5F5DD #FAF0E6 #FAEBD8 #F7E7CE #EFDB82 #F6D9CB #4C1A70 #BA905E #A2CD61 #26AF5F #8EDBE3 #99A98F #ED4E6E #EE765E #FF7A7B #4E4886 #9654B6 #23A96E #97D7E0 #F5EED4 #9AA8B1 #A9876C #2F4159 #89CB4E #F8CC53 #A6C0E5 #BE5496 #BA735F #DC583F #F7DED9 #87888C #D72837</div>
+
+    <script src="js/jquery-1.10.2.min.js"></script>
+    <script src="js/ZeroClipboard.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
+</html> 
